--- a/UE5Cesium.uproject
+++ b/UE5Cesium.uproject
@@ -7,7 +7,11 @@
 		{
 			"Name": "UE5Cesium",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine",
+				"CesiumRuntime"
+			]
 		}
 	],
 	"Plugins": [
